Meta for subpages

--- a/blockchain_page/blockchain.html
+++ b/blockchain_page/blockchain.html
@@ -7,11 +7,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Hire an Online Marketing Manager. Blockchain | Esports | Gaming | Gambling">
-    <meta name="keywords" content="SEO, SMM, CRM for blockchain, esports & gaming">
+    <meta name="description" content="Bitcoin on-chain metrics and stats overview">
+    <meta name="keywords" content="Bitcoin charts and stats">
     <meta name="author" content="Felix Charles">
-    <meta property="og:title" content="Growth Hacker on hire">
-    <meta property="og:description" content="SEO, SMM, CRM for blockchain, esports, gaming & gambling businesses.">
+    <meta property="og:title" content="Bitcoin daily overview">
+    <meta property="og:description" content="Bitcoin on-chain metrics, stats and charts.">
     <meta property="og:image" content="./socialbanner.jpg">
     <meta property="og:url" content="./index.html">
     <meta name="twitter:card" content="summary_large_image">
