--- a/space_page/space.html
+++ b/space_page/space.html
@@ -7,11 +7,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Hire an Online Marketing Manager. Blockchain | Esports | Gaming | Gambling">
-    <meta name="keywords" content="Blockchain, esports, gaming, SEO, SMM, CRM">
+    <meta name="description" content="Check the astronomy picture of the day and more.">
+    <meta name="keywords" content="Astronomy daily update">
     <meta name="author" content="Felix Charles">
-    <meta property="og:title" content="Growth Hacker on hire">
-    <meta property="og:description" content="SEO, SMM, CRM for blockchain, esports, gaming & gambling businesses.">
+    <meta property="og:title" content="Tune-in to space">
+    <meta property="og:description" content="Astronomy picture of the day and live stream from the ISS">
     <meta property="og:image" content="./socialbanner.jpg">
     <meta property="og:url" content="./index.html">
     <meta name="twitter:card" content="summary_large_image">
