--- a/index.html
+++ b/index.html
@@ -92,11 +92,24 @@
   <div id = "profilediv">
   <p>Blockchain, tech and gaming fan. White-hat marketing bots breeder. Social media marketing, automation and animation wizard. Bilingual content and campaign manager (SEO, SEM, CRM). Bootstrap and JavaScript learner.</p>
   <div class = "img-hover-zoom">
-  <a href = "mailto: felixcharlespro@gmail.com"><img src="./business-enquiries.png" alt="decentralization"  style = "max-width:60%; max-height: 60%; padding: 0rem;"></a>
+  <a href = "mailto: felixcharlespro@gmail.com"><img src="./business-enquiries.png" alt="decentralization"  style = "max-width:40%; max-height: 40%; padding: 0rem;"></a>
 </div>
 </div>
 </div>
 </div>
+
+<div class="hr-divider mt-5 mb-3 text-center">
+  <h3 class="hr-divider-content hr-divider-heading ">Partners</h3>
+</div>
+
+<div class='text-center'>
+  <a href = "https://blockbeatmedia.com/">
+  <div class='text-center'>
+  <img src="./bbmlogo 0.png" alt="blockbeatmedia"  style = "max-width:8%; max-height: 8%; padding: 0.7rem;">
+  <p>BlockBeatMedia Digital Marketing Agency</p></a>
+</div>
+</div>
+
 <div class="hr-divider mt-5 mb-3">
   <h3 class="hr-divider-content hr-divider-heading">Blockchain content</h3>
 </div>
