new tab opening for partners

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 </div>
 
 <div class='text-center'>
-  <a href = "https://blockbeatmedia.com/">
+  <a href = "https://blockbeatmedia.com/" target="_blank">
   <div class='text-center'>
   <img src="./bbmlogo 0.png" alt="blockbeatmedia"  style = "max-width:8%; max-height: 8%; padding: 0.7rem;">
   <p>BlockBeatMedia Digital Marketing Agency</p></a>
