--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="Hire the best Growth Hacker in town">
     <meta property="og:description" content="SEO, SMM, CRM in the blockchain, esports, gaming & gambling sectors.">
     <meta property="og:image" content="https://github.com/flxcha/portfolio/blob/master/socialbanner.jpg">
-    <meta property="og:url" content="https://flxcha.github.io/portfolio/">
+    <meta property="og:url" content="https://flxcha.github.io/digital-marketing/">
     <meta name="twitter:card" content="https://github.com/flxcha/portfolio/blob/master/socialbanner.jpg">
     <meta property="og:type" content="blog">
 
