crypto href edit

--- a/blockchain_page/blockchain.html
+++ b/blockchain_page/blockchain.html
@@ -137,7 +137,7 @@
 <hr class="mt-3">
 <div>
   <p>
-    More Bitcoin on-chain metrics and charts on <a href = "https://www.blockchain.com/charts">Blockchain.com</a> and <a href = "https://studio.glassnode.com/metrics?a=BTC&m=addresses.ActiveCount">Glassnode.com</a>.
+    More Bitcoin on-chain metrics and charts on <a href = "https://www.blockchain.com/charts" target="_blank">Blockchain.com</a> and <a href = "https://studio.glassnode.com/metrics?a=BTC&m=addresses.ActiveCount" target="_blank">Glassnode.com</a>.
   </p>
 </div>
 
