Text desc amendment

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         </div>
       </a>
         <p class="statcard-number">
-          #1 SERP for the "how to convert crypto to cash" and "how to convert crypto to bank".
+          #1 SERP for the "how to convert crypto to cash" and "how to cash out crypto" queries.
         </p>
         <hr class="statcard-hr mb-0">
       </div>
