--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 <div class='text-center'>
   <a href = "https://blockbeatmedia.com/" target="_blank">
   <div class='text-center'>
-  <img src="./bbmlogo 0.png" alt="blockbeatmedia"  style = "max-width:50%; max-height: 50%; padding: 0.7rem;">
+  <img src="./bbmlogo 0.png" alt="blockbeatmedia"  style = "max-width:'40%; max-height: 40%; padding: 0.7rem;">
   <p>BlockBeatMedia Digital Marketing Agency</p></a>
 </div>
 </div>
