--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
   <h3 class="hr-divider-content hr-divider-heading ">Partners</h3>
 </div>
 
-<div class='text-center'>
+<div class='text-center' style = "padding: 3rem">
   <a href = "https://blockbeatmedia.com/" target="_blank">
   <div class='text-center'>
-  <img src="./bbmlogo 0.png" alt="blockbeatmedia"  style = "max-width:'20%; max-height: 20%; padding: 3rem;">
+  <img src="./bbmlogo 0.png" alt="blockbeatmedia"  style = "max-width:'20%; max-height: 20%;">
   <p>BlockBeatMedia Digital Marketing Agency</p></a>
 </div>
 </div>
