padding and SMM text

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     </div>
   <div id = "profilediv">
-  <p>Blockchain, tech and gaming fan. White-hat marketing bots breeder. Social media marketing, automation and animation wizard. Bilingual content and campaign manager (SEO, SEM, CRM). Bootstrap and JavaScript learner.</p>
+  <p>Blockchain, tech and gaming fan. White-hat marketing bots breeder. Social media marketing, automation and animation wizard. Bilingual content and campaign manager (SEO, SMM, CRM). Bootstrap and JavaScript learner.</p>
   <div class = "img-hover-zoom">
   <a href = "mailto: felixcharlespro@gmail.com"><img src="./business-enquiries.png" alt="decentralization"  style = "max-width:70%; max-height: 70%; padding: 0rem;"></a>
 </div>
@@ -102,7 +102,7 @@
   <h3 class="hr-divider-content hr-divider-heading ">Partners</h3>
 </div>
 
-<div class='text-center' style = "padding: 2rem">
+<div class='text-center' style = "padding: 1.5rem">
   <a href = "https://blockbeatmedia.com/" target="_blank">
   <div class='text-center'>
   <img src="./bbmlogo 0.png" alt="blockbeatmedia"  style = "max-width:'20%; max-height: 20%;">
