--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   <h3 class="hr-divider-content hr-divider-heading ">Partners</h3>
 </div>
 
-<div class='text-center' style = "padding: 1.5rem">
+<div class='text-center' style = "padding-top: 1.5rem; padding-bottom: 0.5rem;">
   <a href = "https://blockbeatmedia.com/" target="_blank">
   <div class='text-center'>
   <img src="./bbmlogo 0.png" alt="blockbeatmedia"  style = "max-width:'20%; max-height: 20%;">
