--- a/blockchain_page/blockchain.html
+++ b/blockchain_page/blockchain.html
@@ -74,7 +74,7 @@
                 <a class="nav-link active" href="../blockchain_page/blockchain.html">Bitcoin snapshot</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link "href="../space_page/space.html">Space news</a>
+                <a class="nav-link "href="../space_page/space.html">For fun</a>
               </li>
             </ul>
             <hr class="visible-xs mt-3">
