space page title

--- a/space_page/space.html
+++ b/space_page/space.html
@@ -74,7 +74,7 @@
       <div class="col-md-9 content">
         <div class="dashhead">
   <div class="dashhead-titles">
-    <h2 class="dashhead-title">Space News</h2>
+    <h2 class="dashhead-title">For fun</h2>
   </div>
 
   
